crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__integer_enum_with_default_snapshot@integer_enum_with_default_Jpa.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
import jakarta.persistence.*;

enum TaskStatus {
    PENDING(0),
    COMPLETED(100);

    private final int value;

    TaskStatus(int value) {
        this.value = value;
    }

    public int getValue() {
        return value;
    }
}

@Entity
@Table(name = "tasks")
public class Tasks {

    @Column(name = "id", nullable = false)
    private Integer id;

    @Column(name = "status", nullable = false)
    private Integer status = 1;

    protected Tasks() {
    }
}
