crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__integer_enum_with_default_snapshot@integer_enum_with_default_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
enum TaskStatus {
  PENDING // = 0
  COMPLETED // = 100
}

model Tasks {
  id Int
  status TaskStatus @default(dbgenerated("1"))

  @@map("tasks")
}
