crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__integer_enum_with_default_snapshot@integer_enum_with_default_SqlModel.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
from __future__ import annotations

import enum

from sqlmodel import Field, SQLModel


class TaskStatus(enum.IntEnum):
    Pending = 0
    Completed = 100

class Tasks(SQLModel, table=True):
    __tablename__ = "tasks"

    id: int = Field(...)
    status: TaskStatus = Field(default=1)
