crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__integer_enum_with_variant_default_snapshot@integer_enum_with_variant_default_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const taskRuns = pgTable("task_runs", {
  id: integer("id").notNull(),
  status: integer("status").notNull().default(100),
});
