crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__integer_enum_with_variant_default_snapshot@integer_enum_with_variant_default_Jpa.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
import jakarta.persistence.*;

enum TaskRunStatus {
    PENDING(0),
    COMPLETED(100);

    private final int value;

    TaskRunStatus(int value) {
        this.value = value;
    }

    public int getValue() {
        return value;
    }
}

@Entity
@Table(name = "task_runs")
public class TaskRuns {

    @Column(name = "id", nullable = false)
    private Integer id;

    @Column(name = "status", nullable = false)
    private Integer status;

    protected TaskRuns() {
    }
}
